Do not use fixed sidebar on mobile view of article, puts tweet/fb links at top instead ON top of article

--- a/pskb_website/static/css/base.css
+++ b/pskb_website/static/css/base.css
@@ -260,6 +260,10 @@ a.emphasize {
         position: relative;
     }
 
+    .navbar-left-article {
+        position: relative;
+    }
+
     a.emphasize {
         border: 0px;
         text-align: left;
